# pacelf.phase3.jekyll

./: .babelrc  .gitignore  .jekyll-metadata  404.html  Gemfile  Pipfile  README.md  TODO.md  _config.yml  about.html  adding-filters-to-datasets-page.md  convert-xml-to-md.py  data.json  datasets.html  datasets.json  index.html  organizations.html  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  webpack.config.js
_data/: categories.yml  countries.yml
_datasets/: American_SamoaChambers_et_al_2009_Xenomonitoring_of_W_bancrofti_and_D_immitis_in_mosquitoes_from_Am_Samoa_by_PCR_AJTMH.md  American_SamoaCiferri_et_al_1965_AJTMH_Immunologic_studies_in_Oncho_and_LF.md  American_SamoaCiferri_et_al_1969_AJTMH_LF_American_Samoa_369.md  American_SamoaKessel_et_al_1970_LF_MDA_in_American_Samoa_bullwho00210-0048.md  American_SamoaLau_et_al_2014_PLOS_NTD_LF_in_American_Samoa.md  American_SamoaMahoney_Aiu_1970_AJTMH_LF_in_Samoan_immigrants_to_the_US_629.md  American_SamoaMahoney__Kessel_1971_BULL_WHO_Treatment_failure_in_LF_MDA_bullwho00194-0047.md  American_SamoaPacELF_31_King_et_al_2011_Acta_Tropica_Improving_community_participation_to_eliminate_lymphatic_filariasis_in_American_Samoa.md  American_SamoaPacELF_38_Preliminary_action_plan_2001_American_Samoa.md  American_SamoaPacELF_504_Burkot_et_al_2007_MED_VET_ENT_.md  American_SamoaPacELF_790_Liang_et_al_2008_AJTMH_Impact_of_5_rounds_of_MDA_American_Samoa_924.md  American_SamoaPacELF_847_Mladonicky_et_al_2009_AJTMH_Assessing_transmission_of_LF_after_MDA_in_American_Samoa_769.md  (+744 more)
css/: main.css
(+2727 files in other folders)
