[tool.poetry]
name = "pacelf.github.io"
version = "0.1.0"
description = "A static site using Jekyll, the Python is to glue code to generate the raw data."
authors = ["Steve Vandervalk <git@stevevandervalk.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
black = "^20.8b1"
loguru = "^0.5.3"
jinja2 = "^2.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
